feat: add single and multi connection session type options